<resources>
    <string name="app_name">InterViewReminderApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="enter_email">Enter Email</string>
    <string name="add_interview">Add Interview</string>
    <string name="experience">Experience</string>
    <string name="technology">Technology</string>
    <string name="interview_date">Interview Date</string>
    <string name="department">Department</string>
    <string name="remarks">Remarks</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="image">image</string>
    <string name="time">Time</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancelled">Cancelled</string>
    <string name="done">Done</string>
    <string name="interview_time">Interview Time</string>
    <string name="please_wait">Please wait....</string>
    <string name="loading">Loading....</string>
    <string name="cancel">Cancel</string>
    <string name="setReminder">Set Reminder</string>
    <string name="welcometohome">Welcome To Home</string>
    <string name="logout">Log out</string>
    <string name="dialogTitle">Are you sure you want to cancel?</string>
    <string name="message">Message</string>


</resources>