<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="addInterview"
            type="viewmodel.AddInterviewViewModel" />

    </data>

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            tools:context="activitiy.AddInterview">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/appBar"
                    style="@style/interviewReminder.toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                    app:title=" " />

            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:id="@+id/tvAddInterview"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/add_interview"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:helperText="@{addInterview.nameError}"
                app:helperTextTextColor="@color/DarkRed"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddInterview">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textborder"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={addInterview.candidateName}"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilExperience"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:helperText="@{addInterview.experienceError}"
                app:helperTextTextColor="@color/DarkRed"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/tilName"
                app:layout_constraintStart_toStartOf="@id/tilName"
                app:layout_constraintTop_toBottomOf="@+id/tilName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExperience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textborder"
                    android:hint="@string/experience"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={addInterview.experience}"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTechnology"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:helperText="@{addInterview.technologyError}"
                app:helperTextTextColor="@color/DarkRed"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/tilName"
                app:layout_constraintStart_toStartOf="@id/tilName"
                app:layout_constraintTop_toBottomOf="@+id/tilExperience">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTechnology"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textborder"
                    android:hint="@string/technology"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={addInterview.technology}"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvInterviewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/interview_date"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tilTechnology"
                app:layout_constraintTop_toBottomOf="@+id/tilTechnology" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilInterviewDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:helperText="@{addInterview.interviewDateError}"
                app:helperTextTextColor="@color/DarkRed"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/tilName"
                app:layout_constraintStart_toStartOf="@id/tilName"
                app:layout_constraintTop_toBottomOf="@+id/tvInterviewDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInterviewDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/textborder"
                    android:clickable="true"
                    android:drawableEnd="@drawable/calendar"
                    android:focusable="false"
                    android:hint="@string/interview_date"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={addInterview.interviewDate}"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvInterviewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/interview_time"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tilTechnology"
                app:layout_constraintTop_toBottomOf="@+id/tilInterviewDate" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilInterviewTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:helperText="@{addInterview.interviewerTimeError}"
                app:helperTextTextColor="@color/DarkRed"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/tilName"
                app:layout_constraintStart_toStartOf="@id/tilName"
                app:layout_constraintTop_toBottomOf="@+id/tvInterviewTime">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInterviewTime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/textborder"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_baseline_access_time_24"
                    app:drawableTint="@color/black"
                    android:focusable="false"
                    android:hint="@string/time"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={addInterview.interviewTime}"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/department"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tilTechnology"
                app:layout_constraintTop_toBottomOf="@+id/tilInterviewTime" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSpinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="@id/tilName"
                app:layout_constraintStart_toStartOf="@id/tilName"
                app:layout_constraintTop_toBottomOf="@+id/tvDepartment">

                <Spinner
                    android:id="@+id/spinnerDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onItemSelected="@{addInterview.departmentOnItemSelected}" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tilTechnology"
                app:layout_constraintTop_toBottomOf="@+id/cvSpinner" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSpinnerName"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="@id/tilName"
                app:layout_constraintStart_toStartOf="@id/tilName"
                app:layout_constraintTop_toBottomOf="@+id/tvName">

                <Spinner
                    android:id="@+id/spinnerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onItemSelected="@{addInterview.interviewerOnItemSelected}" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRemarks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:helperText="@{addInterview.remarksError}"
                app:helperTextTextColor="@color/DarkRed"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/tilName"
                app:layout_constraintStart_toStartOf="@id/tilName"
                app:layout_constraintTop_toBottomOf="@+id/cvSpinnerName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRemarks"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/textborder"
                    android:hint="@string/remarks"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={addInterview.remarks}"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/my_button_bg"
                app:backgroundTint="@color/buttoncolor"
                android:onClick="@{v->addInterview.addOnClick()}"
                android:paddingHorizontal="40dp"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilRemarks" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>