<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activitiy.RegistrationActivity">

    <ImageView
        android:id="@+id/ivLearning"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_illustration_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="username"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/edittextborder"
        android:backgroundTint="@color/purple_500"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLearning"/>



    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="12dp"
        android:autofillHints="username"
        android:background="@drawable/edittextborder"
        android:backgroundTint="@color/purple_500"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:autofillHints="username"
        android:background="@drawable/edittextborder"
        android:backgroundTint="@color/purple_500"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/customsignup"
        android:backgroundTint="@color/white"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="Create An Account"
        android:textColor="@color/lightGrey"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Already have an account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate" />

    <TextView
        android:id="@+id/tvRedirectToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>